# aioautomower

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  _secrets.yaml  example.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml  labels.yaml  linting.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: autoblack.yml  benchmark.yml  codeql-analysis.yml  codeql.yml  draft-with-date-tag.yml  linting.yml  pr-labels.yml  pre-commit-updater.yml  python-package.yml  python-publish.yml  python-setup.yml  release-drafter.yml  release.yml  tests.yaml  tests.yml  typing.yml
aioautomower/: __init__.py  api.py  auth.py  cli.py  const.py  example.py  exceptions.py  model.py  rest.py  session.py  utils.py
husqvarna_automower/: __init__.py
src/aioautomower/: __init__.py  _husqvarna_secrets.py  auth.py  commands.py  const.py  example.py  exceptions.py  helper.py  logging_config.py  model.py  session.py  timeline.py  tz_util.py  utils.py
src/aioautomower/model/: __init__.py  battery.py  calendar.py  capabilities.py  connectivity.py  metadata.py  model.py  model_battery.py  model_calendar.py  model_message.py  model_metadata.py  model_mower.py  model_planner.py  model_settings.py  model_statistics.py  model_stay_out_zones.py  model_token.py  model_work_areas.py  mower.py  planner.py  positions.py  statistics.py  system.py  token_model.py  utils.py
src/aioautomower/model_input/: __init__.py  model_event.py  model_message.py  model_rest.py
tests/: __init__.py  conftest.py  const.py  syrupy.py  test_auth.py  test_calendar.py  test_error_text.py  test_high_feature_mower_model.py  test_jwt_model.py  test_low_feature_mower_model.py  test_model.py  test_mower_model.py  test_session.py  test_standard_mower_model.py  test_timeliney.py  test_timezone.py  test_two_mower.py  test_utils.py  test_work_area_type.py
tests/__snapshots__/: test_calendar.ambr  test_error_text.ambr  test_high_feature_mower_model.ambr  test_jwt_model.ambr  test_low_feature_mower_model.ambr  test_model.ambr  test_mower_model.ambr  test_session.ambr  test_standard_mower_model.ambr
tests/fixtures/: control_response.json  empty_message.json  error.json  high_feature_mower.json  high_feature_mower_without_tasks.json  jwt  jwt.json  low_feature_mower.json  mower.json  new_data.json  positions_event.json  raw_data.json  rest_trash.json  return_command.json  settings_event.json  settings_event_other_mower.json  settings_event_with_tasks.json  status_event.json  status_event_battery_50.json  status_event_mower2.json  task_list.json  tasks.json  tasks_without_work_area.json
tests/fixtures/events/: battery_event.json  calendar_event.json  calendar_event_work_area.json  cutting_height_event.json  headlights_event.json  message_event.json  messages_event.json  mower_event.json  planer_event.json  position_event.json  positions_event.json
