[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aioautomower"
# The version is set by GH action on release
version = "0.0.0"
license     = {text = "Apache-2.0"}
description = "MPython module to talk to Husqvarna Automower."
readme = "README.md"
requires-python = ">=3.10"
authors     = [
    {name = "Thomas Protzner", email = "thomas.protzner@gmail.com"}
]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "aiohttp",
  "mashumaro",
  "PyJWT"
]

[tool.poetry]
name = "aioautomower"
# The version is set by GH action on release
version = "0.0.0"
description = "MPython module to talk to Husqvarna Automower."
authors = ["Thomas55555"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
mashumaro = "^3.12"
PyJWT = "^2.8.0"

[tool.poetry.dev-dependencies]
codespell = "2.2.6"
covdefaults = "2.3.0"
coverage = {version = "7.4.1", extras = ["toml"]}
mypy = "1.8.0"
pre-commit = "3.6.2"
pre-commit-hooks = "4.5.0"
pylint = "3.0.3"
pytest = "8.0.0"
pytest-asyncio = "0.23.5"
pytest-cov = "4.1.0"
ruff = "0.2.1"
safety = "3.0.1"
yamllint = "1.34.0"
syrupy = "4.6.1"
aioresponses = "0.7.6"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
packages = ["aioautomower"]
include-package-data = true

[tool.setuptools.package-data]
aioautomower = ["py.typed"]

[tool.ruff]
fix = true
show-fixes = true

# enable later: "C90", "PTH", "TCH", "RET", "ANN"
select = ["E", "F", "W", "I", "N", "D", "UP", "PL", "Q", "SIM", "TID", "ARG"]
ignore = ["PLR2004", "N818"]
unfixable = ["F841"]
line-length = 100
target-version = "py311"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "pep257"

[tool.ruff.pylint]

max-branches=25
max-returns=15
max-args=10
max-statements=50