[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "aioautomower"
# The version is set by GH action on release
version = "0.0.0"
license     = {text = "Apache-2.0"}
description = "MPython module to talk to Husqvarna Automower."
readme = "README.md"
requires-python = ">=3.10"
authors     = [
    {name = "Thomas Protzner", email = "thomas.protzner@gmail.com"}
]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "aiohttp",
  "mashumaro",
  "PyJWT"
]

[project.urls]
Documentation = "https://github.com/Thomas55555/aioautomower"
Repository = "https://github.com/Thomas55555/aioautomower"
Issues = "https://github.com/Thomas55555/aioautomower/issues"

[tool.poetry]
name = "aioautomower"
# The version is set by GH action on release
version = "0.0.0"
description = "MPython module to talk to Husqvarna Automower."
authors = ["Thomas55555"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
mashumaro = "^3.12"
PyJWT = "^2.8.0"

[tool.poetry.group.dev.dependencies]
codespell = "2.2.6"
covdefaults = "2.3.0"
coverage = {version = "7.4.4", extras = ["toml"]}
mypy = "1.9.0"
pre-commit = "3.7.0"
pre-commit-hooks = "4.6.0"
pylint = "3.1.0"
pytest = "8.1.1"
pytest-asyncio = "0.23.6"
pytest-cov = "5.0.0"
ruff = "0.3.6"
safety = "3.1.0"
yamllint = "1.35.1"
syrupy = "4.6.1"
aioresponses = "0.7.6"
freezegun = "^1.4.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
packages = ["aioautomower"]
include-package-data = true

[tool.setuptools.package-data]
aioautomower = ["py.typed"]

[tool.ruff]
fix = true
show-fixes = true


[tool.pylint.FORMAT]
max-line-length = 88

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "pep257"

[tool.ruff.lint.pylint]

max-branches=25
max-returns=15
max-args=10
max-statements=50

[tool.pylint]
ignore = ["R0902"]

[tool.pylint.MASTER]
ignore = [
  "tests",
]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.11"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true


[tool.coverage.report]
show_missing = true
fail_under = 30

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["aioautomower/*.py"]
