[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "aioautomower"
# The version is set by GH action on release
version = "0.0.0"
description = "MPython module to talk to Husqvarna Automower."
authors = [
    "Thomas Peter Protzner <thomas.protzner@gmail.com>",
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "aioautomower", from = "src" },
]
homepage = "https://github.com/Thomas55555/aioautomower"
repository = "https://github.com/Thomas55555/aioautomower"
documentation = "https://github.com/Thomas55555/aioautomower"
keywords = ["Husqvarna", "Automower", "api", "async", "client"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
Issues = "https://github.com/Thomas55555/aioautomower/issues"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
mashumaro = "^3.12"
PyJWT = "^2.8.0"
ical = ">=8.0.1"
tzlocal = "^5.2"
python-dateutil = "^2.9.0-post.0"
orjson = "^3.11.2"

[tool.poetry.group.dev.dependencies]
aioresponses = "0.7.8"
codespell = "2.4.1"
covdefaults = "2.3.0"
coverage = {version = "7.13.3", extras = ["toml"]}
mypy = "1.19.1"
prek = "0.2.1"
pre-commit-hooks = "6.0.0"
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
pytest-codspeed = "4.2.0"
pytest-cov = "7.0.0"
ruff = "0.15.0"
syrupy = "5.1.0"
time-machine = "3.2.0"
types-python-dateutil = "^2.9.0.20240821"
types-pyyaml = "^6.0.12.20241230"
yamllint = "1.38.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
metadata = false

[tool.pytest.ini_options]
addopts = "--cov=aioautomower --cov-report=term-missing -vv"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
fix = true
show-fixes = true
src = ["./src"]
target-version = "py311"
line-length = 88
include = ["src/**/*.py", "tests/**/*.py"]


[tool.ruff.lint]
ignore = [
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "PLR2004", # Just annoying, not really useful

  # Conflicts with the Ruff formatter
  "COM812",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"example.py" = ["T201", "T203"] # Allow for main entry & scripts to write to stdout
"tests/**/*.py" = [
    "SLF001", #access to private members
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S105", # needed in tests (hardcoded password)
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "pep257"

[tool.ruff.lint.pylint]
max-branches=25
max-returns=15
max-args=10
max-statements=50


[tool.mypy]
platform = "linux"
python_version = "3.11"
strict = true
namespace_packages = true
mypy_path = "src"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# strict rules
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["aioautomower"]
